// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/blocksEditor/rootInput should match Display snapshot 1`] = `
<div>
  <div
    class="RootInput css-b62m3t-container"
  >
    <span
      class="css-1f43avz-a11yText-A11yText"
      id="react-select-2-live-region"
    />
    <span
      aria-atomic="false"
      aria-live="polite"
      aria-relevant="additions text"
      class="css-1f43avz-a11yText-A11yText"
    />
    <div
      class="RootInput__control css-9fsvdt-control"
    >
      <div
        class="RootInput__value-container css-30zlo3-ValueContainer"
      >
        <div
          class="RootInput__input-container css-nkozic-Input"
          data-value="test-value"
        >
          <input
            aria-autocomplete="list"
            aria-describedby="react-select-2-placeholder"
            aria-expanded="false"
            aria-haspopup="true"
            autocapitalize="none"
            autocomplete="off"
            autocorrect="off"
            class="RootInput__input"
            id="react-select-2-input"
            role="combobox"
            spellcheck="false"
            style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
            tabindex="0"
            type="text"
            value="test-value"
          />
        </div>
      </div>
      <div
        class="RootInput__indicators css-1hb7zxy-IndicatorsContainer"
      />
    </div>
  </div>
</div>
`;

exports[`components/blocksEditor/rootInput should match Input snapshot 1`] = `
<div>
  <div
    class="RootInput css-b62m3t-container"
  >
    <span
      class="css-1f43avz-a11yText-A11yText"
      id="react-select-3-live-region"
    />
    <span
      aria-atomic="false"
      aria-live="polite"
      aria-relevant="additions text"
      class="css-1f43avz-a11yText-A11yText"
    />
    <div
      class="RootInput__control css-9fsvdt-control"
    >
      <div
        class="RootInput__value-container css-30zlo3-ValueContainer"
      >
        <div
          class="RootInput__input-container css-nkozic-Input"
          data-value="test-value"
        >
          <input
            aria-autocomplete="list"
            aria-describedby="react-select-3-placeholder"
            aria-expanded="false"
            aria-haspopup="true"
            autocapitalize="none"
            autocomplete="off"
            autocorrect="off"
            class="RootInput__input"
            id="react-select-3-input"
            role="combobox"
            spellcheck="false"
            style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
            tabindex="0"
            type="text"
            value="test-value"
          />
        </div>
      </div>
      <div
        class="RootInput__indicators css-1hb7zxy-IndicatorsContainer"
      />
    </div>
  </div>
</div>
`;

exports[`components/blocksEditor/rootInput should match Input snapshot with menu open 1`] = `
<div>
  <div
    class="RootInput css-b62m3t-container"
  >
    <span
      class="css-1f43avz-a11yText-A11yText"
      id="react-select-4-live-region"
    />
    <span
      aria-atomic="false"
      aria-live="polite"
      aria-relevant="additions text"
      class="css-1f43avz-a11yText-A11yText"
    />
    <div
      class="RootInput__control RootInput__control--menu-is-open css-9fsvdt-control"
    >
      <div
        class="RootInput__value-container css-30zlo3-ValueContainer"
      >
        <div
          class="RootInput__placeholder css-vinljo-placeholder"
          id="react-select-4-placeholder"
        >
          Add text or type "/" for commands
        </div>
        <div
          class="RootInput__input-container css-g5309v-Input"
          data-value=""
        >
          <input
            aria-autocomplete="list"
            aria-controls="react-select-4-listbox"
            aria-describedby="react-select-4-placeholder"
            aria-expanded="true"
            aria-haspopup="true"
            aria-owns="react-select-4-listbox"
            autocapitalize="none"
            autocomplete="off"
            autocorrect="off"
            class="RootInput__input"
            id="react-select-4-input"
            role="combobox"
            spellcheck="false"
            style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
            tabindex="0"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="RootInput__indicators css-1hb7zxy-IndicatorsContainer"
      />
    </div>
    <div
      class="RootInput__menu-portal css-1aj7brc"
    >
      <div
        class="RootInput__menu css-1rsmi4x-menu"
        id="react-select-4-listbox"
      >
        <div
          class="RootInput__menu-list css-g29tl0-MenuList"
        >
          <div
            aria-disabled="false"
            class="RootInput__option RootInput__option--is-focused css-erqggd-option"
            id="react-select-4-option-0"
            tabindex="-1"
          >
            <div
              class="slash-command"
            >
              <div
                class="slash-command__icon"
              >
                <i
                  class="CompassIcon icon-format-header-1"
                />
              </div>
              <div
                class="slash-command__info"
              >
                <div
                  class="slash-command__title"
                >
                  /title
                </div>
                <div
                  class="slash-command__desc"
                >
                  Creates a new Title block.
                </div>
              </div>
            </div>
          </div>
          <div
            aria-disabled="false"
            class="RootInput__option css-14xsrqy-option"
            id="react-select-4-option-1"
            tabindex="-1"
          >
            <div
              class="slash-command"
            >
              <div
                class="slash-command__icon"
              >
                <i
                  class="CompassIcon icon-format-header-2"
                />
              </div>
              <div
                class="slash-command__info"
              >
                <div
                  class="slash-command__title"
                >
                  /subtitle
                </div>
                <div
                  class="slash-command__desc"
                >
                  Creates a new Sub title block.
                </div>
              </div>
            </div>
          </div>
          <div
            aria-disabled="false"
            class="RootInput__option css-14xsrqy-option"
            id="react-select-4-option-2"
            tabindex="-1"
          >
            <div
              class="slash-command"
            >
              <div
                class="slash-command__icon"
              >
                <i
                  class="CompassIcon icon-format-header-3"
                />
              </div>
              <div
                class="slash-command__info"
              >
                <div
                  class="slash-command__title"
                >
                  /subsubtitle
                </div>
                <div
                  class="slash-command__desc"
                >
                  Creates a new Sub Sub title block.
                </div>
              </div>
            </div>
          </div>
          <div
            aria-disabled="false"
            class="RootInput__option css-14xsrqy-option"
            id="react-select-4-option-3"
            tabindex="-1"
          >
            <div
              class="slash-command"
            >
              <div
                class="slash-command__icon"
              >
                <i
                  class="CompassIcon icon-image-outline"
                />
              </div>
              <div
                class="slash-command__info"
              >
                <div
                  class="slash-command__title"
                >
                  /image
                </div>
                <div
                  class="slash-command__desc"
                >
                  Creates a new Image block.
                </div>
              </div>
            </div>
          </div>
          <div
            aria-disabled="false"
            class="RootInput__option css-14xsrqy-option"
            id="react-select-4-option-4"
            tabindex="-1"
          >
            <div
              class="slash-command"
            >
              <div
                class="slash-command__icon"
              >
                <i
                  class="CompassIcon icon-text-box-outline"
                />
              </div>
              <div
                class="slash-command__info"
              >
                <div
                  class="slash-command__title"
                >
                  /text
                </div>
                <div
                  class="slash-command__desc"
                >
                  Creates a new Text block.
                </div>
              </div>
            </div>
          </div>
          <div
            aria-disabled="false"
            class="RootInput__option css-14xsrqy-option"
            id="react-select-4-option-5"
            tabindex="-1"
          >
            <div
              class="slash-command"
            >
              <div
                class="slash-command__icon"
              >
                <span>
                  -
                </span>
              </div>
              <div
                class="slash-command__info"
              >
                <div
                  class="slash-command__title"
                >
                  /divider
                </div>
                <div
                  class="slash-command__desc"
                >
                  Creates a new Divider block.
                </div>
              </div>
            </div>
          </div>
          <div
            aria-disabled="false"
            class="RootInput__option css-14xsrqy-option"
            id="react-select-4-option-6"
            tabindex="-1"
          >
            <div
              class="slash-command"
            >
              <div
                class="slash-command__icon"
              >
                <i
                  class="CompassIcon icon-format-list-bulleted"
                />
              </div>
              <div
                class="slash-command__info"
              >
                <div
                  class="slash-command__title"
                >
                  /list-item
                </div>
                <div
                  class="slash-command__desc"
                >
                  Creates a new List item block.
                </div>
              </div>
            </div>
          </div>
          <div
            aria-disabled="false"
            class="RootInput__option css-14xsrqy-option"
            id="react-select-4-option-7"
            tabindex="-1"
          >
            <div
              class="slash-command"
            >
              <div
                class="slash-command__icon"
              >
                <i
                  class="CompassIcon icon-file-text-outline"
                />
              </div>
              <div
                class="slash-command__info"
              >
                <div
                  class="slash-command__title"
                >
                  /attachment
                </div>
                <div
                  class="slash-command__desc"
                >
                  Creates a new Attachment block.
                </div>
              </div>
            </div>
          </div>
          <div
            aria-disabled="false"
            class="RootInput__option css-14xsrqy-option"
            id="react-select-4-option-8"
            tabindex="-1"
          >
            <div
              class="slash-command"
            >
              <div
                class="slash-command__icon"
              >
                <i
                  class="CompassIcon icon-format-quote-open"
                />
              </div>
              <div
                class="slash-command__info"
              >
                <div
                  class="slash-command__title"
                >
                  /quote
                </div>
                <div
                  class="slash-command__desc"
                >
                  Creates a new Quote block.
                </div>
              </div>
            </div>
          </div>
          <div
            aria-disabled="false"
            class="RootInput__option css-14xsrqy-option"
            id="react-select-4-option-9"
            tabindex="-1"
          >
            <div
              class="slash-command"
            >
              <div
                class="slash-command__icon"
              >
                <i
                  class="CompassIcon icon-video-outline"
                />
              </div>
              <div
                class="slash-command__info"
              >
                <div
                  class="slash-command__title"
                >
                  /video
                </div>
                <div
                  class="slash-command__desc"
                >
                  Creates a new Video block.
                </div>
              </div>
            </div>
          </div>
          <div
            aria-disabled="false"
            class="RootInput__option css-14xsrqy-option"
            id="react-select-4-option-10"
            tabindex="-1"
          >
            <div
              class="slash-command"
            >
              <div
                class="slash-command__icon"
              >
                <i
                  class="CompassIcon icon-checkbox-marked"
                />
              </div>
              <div
                class="slash-command__info"
              >
                <div
                  class="slash-command__title"
                >
                  /checkbox
                </div>
                <div
                  class="slash-command__desc"
                >
                  Creates a new Checkbox block.
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
